--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/webpack-env": "^1.15.2",
     "jison": "^0.4.18",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
